--- a/Items.Web/app/directives/crud.grid/cell.editor/cell.editor.view.html
+++ b/Items.Web/app/directives/crud.grid/cell.editor/cell.editor.view.html
@@ -1,5 +1,5 @@
 ﻿
-<div ng-switch="cellEditorCtrl.column.type" >
+<div ng-switch="cellEditorCtrl.column.type">
 
     <!--Text required-->
     <input ng-switch-default type="text" required ng-if="cellEditorCtrl.column.required != 'false'"
@@ -16,7 +16,7 @@
 
         <input type="text"
                class="form-control"
-               datepicker-popup="fullDate"
+               datepicker-popup="dd/MM/yyyy"
                min-date="cellEditorCtrl.today"
                ng-model="cellEditorCtrl.item[cellEditorCtrl.column.binding]"
                is-open="cellEditorCtrl.datePickerOpen"
@@ -35,7 +35,7 @@
 
         <input type="text"
                class="form-control"
-               datepicker-popup="fullDate"
+               datepicker-popup="dd/MM/yyyy"
                min-date="cellEditorCtrl.today"
                ng-model="cellEditorCtrl.item[cellEditorCtrl.column.binding]"
                is-open="cellEditorCtrl.datePickerOpen"
@@ -48,23 +48,24 @@
         </span>
 
     </span>
-  
+
     <!--Button-->
-    <span  ng-switch-when="button">
+    <span ng-switch-when="button">
         <!--Empty-->
     </span>
 
 
     <!--dropdown not required-->
-  
-    <div class="input-group"  ng-switch-when="selectCity">
-        
-        <select ng-model="cellEditorCtrl.item[cellEditorCtrl.column.binding]" class="selectpicker form-control"  >
-            <option  value="-1" disabled selected  >Select City</option>
-            <option  value="Sydney" >Sydney</option>
-            <option  value="Melbourne">Melbourne</option>
+    <!--get using Json later after integrating with EF-->
+
+    <div class="input-group" ng-switch-when="selectCity">
+
+        <select ng-model="cellEditorCtrl.item[cellEditorCtrl.column.binding]" class="selectpicker form-control">
+            <option value="-1" disabled selected>Select City</option>
+            <option value="Sydney">Sydney</option>
+            <option value="Melbourne">Melbourne</option>
         </select>
     </div>
-    
+
 
 </div>
