--- a/Items.Web/app/items/items.view.html
+++ b/Items.Web/app/items/items.view.html
@@ -27,30 +27,30 @@
          },
          {
             "binding"       :"username",
-            "header"        :"User",
+            "header"        :"username",
             "type"          :"text",
             "required"      :"true"
          },
           {
             "binding"       :"dateoftravel",
-            "header"        :"Date Of Travel",
+            "header"        :"dateoftravel",
             "type"          :"date",
             "required"      :"false"
          },
           {
-            "binding"       :"FlightName",
-            "header"        :"Flight Name",
+            "binding"       :"flightname",
+            "header"        :"flightname",
             "type"          :"text",
             "required"      :"false"
          },
           {
-            "binding"       :"FlightCost",
-            "header"        :"Flight Cost",
+            "binding"       :"flightcost",
+            "header"        :"flightcost",
             "type"          :"text",
             "required"      :"false"
          },
           {
-            "binding"       :"Website",
+            "binding"       :"website",
             "header"        :"Website",
             "type"          :"text",
             "required"      :"false"
