Add new functionality bug corrected

--- a/Items.Web/app/items/items.view.html
+++ b/Items.Web/app/items/items.view.html
@@ -25,28 +25,28 @@
             "type"          :"selectCity",
             "required"      :"true"
          },
-         {
+          {
             "binding"       :"username",
-            "header"        :"username",
+            "header"        :"UserName",
             "type"          :"text",
-            "required"      :"true"
+            "required"      :"false"
+         },
+           {
+            "binding"       :"flightCost",
+            "header"        :"FlightCost",
+            "type"          :"text",
+            "required"      :"false"
          },
           {
-            "binding"       :"dateoftravel",
-            "header"        :"dateoftravel",
+            "binding"       :"flightName",
+            "header"        :"FlightName",
+            "type"          :"text",
+            "required"      :"false"
+         },
+         {
+            "binding"       :"dateOfTravel",
+            "header"        :"DateOfTravel",
             "type"          :"date",
-            "required"      :"false"
-         },
-          {
-            "binding"       :"flightname",
-            "header"        :"flightname",
-            "type"          :"text",
-            "required"      :"false"
-         },
-          {
-            "binding"       :"flightcost",
-            "header"        :"flightcost",
-            "type"          :"text",
             "required"      :"false"
          },
           {
