--- a/Items.Web/app/directives/crud.grid/cell.editor/cell.editor.view.html
+++ b/Items.Web/app/directives/crud.grid/cell.editor/cell.editor.view.html
@@ -16,7 +16,7 @@
 
         <input type="text"
                class="form-control"
-               datepicker-popup="dd/MM/yyyy"
+               datepicker-popup="fullDate"
                min-date="cellEditorCtrl.today"
                ng-model="cellEditorCtrl.item[cellEditorCtrl.column.binding]"
                is-open="cellEditorCtrl.datePickerOpen"
